<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="create_customer_label">添加客户</string>
    <string name="create_customer_name">客户姓名*</string>
    <string name="create_customer_contact_tip">联系方式*</string>
    <string name="create_customer_input_contact">请输入联系方式</string>
    <string name="create_customer_remark">备注</string>
    <string name="create_customer_contact_type">类型</string>
    <string name="create_customer_success">创建客户成功</string>
    <string name="create_customer_jump_to_detail">去创建角色/订单</string>

    <string name="customer_detail_character">角色</string>
    <string name="customer_detail_order">订单</string>

    <string name="customer_list_contact_qq">QQ: %s</string>
    <string name="customer_list_contact_wechat">微信: %s</string>
    <string name="customer_list_contact_phone">手机号: %s</string>

    <string name="item_customer_add_character">创建角色</string>
    <string name="item_customer_create_order">新建订单</string>

    <string name="error_customer_id">客户ID错误</string>
    <string name="error_customer_contact_exist">已经存在以上联系方式的客户</string>
    <string name="error_customer_input_name">请输入姓名</string>
    <string name="error_customer_select_contact_type">请选择类型</string>
    <string name="error_customer_input_contact">@string/create_customer_input_contact</string>
    <string name="error_create_customer">创建客户失败</string>
    <string name="error_customer_do_not_exist">客户不存在</string>
    <string name="error_delete_customer">删除客户失败</string>

    <string name="customer_character_create_order">新建订单</string>

    <string name="dialog_customer_detail_title">提示</string>
    <string name="dialog_customer_detail_message_delete">确认要删除客户: %s 吗?\n删除该客户将会删除所有该客户的角色与订单</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="action_delete">删除</string>
    <string name="action_search">搜索</string>

</resources>